<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager VIP</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="used">Used</string>
    <string name="free">Free</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="apk">APK Files</string>
    <string name="recent">Recent</string>
    <string name="search">Search files...</string>
    <string name="no_files">No files here</string>
    <string name="new_folder">New Folder</string>
    <string name="folder_name">Folder name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="paste">Paste</string>
    <string name="share">Share</string>
    <string name="properties">Properties</string>
    <string name="select_all">Select All</string>
    <string name="vip">VIP</string>
    <string name="upgrade_vip">Upgrade to VIP</string>
    <string name="vip_desc">Remove all ads, unlock premium themes and get unlimited features</string>
    <string name="watch_ad">Watch Ad for VIP (Demo)</string>
    <string name="vip_active">VIP ACTIVE</string>
    <string name="you_are_vip">You are a VIP member! All ads removed.</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="permission_needed">Storage permission needed to manage files</string>
    <string name="grant">Grant Access</string>
    <string name="item_count">%1$d items</string>
    <string name="delete_confirm">Delete %1$s?</string>
    <string name="copy_confirm">Copy to %1$s?</string>
    <string name="move_confirm">Move to %1$s?</string>
    <string name="done">Done</string>
    <string name="error">Error</string>
    <string name="file_name">File name</string>
    <string name="no_favorites">No favorites yet. Tap the star icon on any file to add it.</string>
    <string name="path">Path</string>
    <string name="modified">Modified</string>
    <string name="items">Items</string>
    <string name="used_format">Used: %1$s</string>
    <string name="free_format">Free: %1$s</string>
    <string name="welcome_vip">Welcome VIP Member!</string>
    <string name="storage_permission_title">Storage Access</string>
    <string name="storage_permission_msg">File Manager VIP needs storage permission to browse and manage your files.</string>
    <string name="loading">Loading...</string>
    <string name="paste_here">Paste here</string>
    <string name="nothing_to_paste">Nothing to paste</string>
    <string name="rename_to">Rename to</string>
    <string name="file_properties">File Properties</string>
    <string name="folder_properties">Folder Properties</string>
    <string name="cannot_open">Cannot open file</string>
    <string name="already_exists">%1$s already exists</string>
    <string name="invalid_name">Invalid name</string>
</resources>
